--- a/Z13/.config/wofi/style.css
+++ b/Z13/.config/wofi/style.css
@@ -1,6 +1,6 @@
 #window {
     margin: 0px;
-    border: 2px solid;
+    border: 2px solid #8f8f8f;
     border-color: #47c3fd;
     border-radius: 25px;
     background: rgba(0, 0, 0, 0.6); /* Transparent background */
@@ -20,12 +20,16 @@
 
 #entry {
     margin: 0px 15px;
-    padding: 5px;
+    padding: 3px;
+
+    /* Give every entry an invisible border to prevent :selected border from offsetting content */
+    border: 2px solid rgba(0, 0, 0, 0);
+    border-radius: 25px;
 }
 
 #entry:selected {
     background: rgba(0, 0, 0, 0.2);
-    border: none;
+    border: 2px solid #8f8f8f;
     border-radius: 25px;
     color: #d8d8d8;
 }
