Z13: Add Nextcloud, fix waybar tray, fix LibreWolf PiP

--- a/Z13/.config/waybar/style.css
+++ b/Z13/.config/waybar/style.css
@@ -22,6 +22,15 @@
   color: #fa5aa4;
 }
 
+#tray > .passive {
+  -gtk-icon-effect: dim;
+}
+
+#tray > .needs-attention {
+  -gtk-icon-effect: highlight;
+  background-color: #eb4d4b;
+}
+
 #tray,
 #cpu,
 #temperature,
